--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -37,7 +37,7 @@
         <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/add-file(1).svg" width="45" class="d-inline-block align-center" alt="">Agregar nuevo
       </a>
       <a class="btn btn-outline-danger"  type="button" routerLink="/charts">
-        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/stats.svg" width="45" class="d-inline-block align-center" alt="">Agregar nuevo
+        <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/stats.svg" width="45" class="d-inline-block align-center" alt="">Ver estadística
       </a>
     </div>
   </mat-toolbar-row>
