--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -1,12 +1,10 @@
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Nueva Orden de Trabajo</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17-beta.0/vue.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Dashboard General</title>
   <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
@@ -17,13 +15,15 @@
   <script src="../assets/js/sb-admin-2.min.js"></script>
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
+
 <body>
-  <app-nav></app-nav>
-  <div id="content-wrapper" class="d-flex flex-column" style="background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
+  <div class="page">
+  <app-navbar></app-navbar>
+  <div id="content-wrapper" class="d-flex flex-column">
     <div id="content">
       <div class="container-fluid" style="width: 1000px; ">
-        <section class="section section-container" style="padding-bottom: 10px;">
-          <div class="box" >
+        <section class="section section-container">
+          <div class="box">
             <div class="row" style="margin-bottom: 2%;">
               <div class="col-2-sm" style="margin-left: 5%;">
                 <img  src="../assets/icons/svg/settings3_c.svg"  width="72" class="d-inline-block align-center" alt="">
@@ -71,5 +71,5 @@
       </section>
       </div>
     </div>
-  </div>
+  </div></div>
   </body>
