--- a/src/app/add-motocicleta/add-motocicleta.component.html
+++ b/src/app/add-motocicleta/add-motocicleta.component.html
@@ -1,12 +1,10 @@
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Nueva Orden de Trabajo</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17-beta.0/vue.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Dashboard General</title>
   <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
@@ -17,96 +15,100 @@
   <script src="../assets/js/sb-admin-2.min.js"></script>
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
-<body style="background-color: #C4C4C4;">
-  <app-nav></app-nav>
-  <div id="content-wrapper" style="background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
-    <div id="content">
-      <div class="row">
-        <div class="col-6" center>
-          <section class="section section-container" style="padding-bottom: 10px;">
-            <div class="box">
-              <h2>Agregar nueva actividad</h2>
-              <form [formGroup]="Motocicletaform">
-                <div class="field">
-                  <div class="row" style="margin-left: 10%;">
-                    <div class="col-2">
-                      <img  src="../assets/icons/svg/motorbike_c.png"  width="72" class="d-inline-block align-center" alt="">
-                    </div>
-                    <div class="col-8">
-                      <div class="field">
-                        <label>Marca</label>
-                        <div class="row">
-                          <div class="col-6">
-                            <button class="btn btn-warning" style="width:140px;" (click)="NuevaMarca()">
-                              <label *ngIf=nuevaMarca style="color:white">Nueva Marca</label>
-                              <label *ngIf=!nuevaMarca style="color:white">Nueva Marca</label>
-                            </button>
-                          </div>
-                          <div class="col-6" *ngIf="nuevaMarca">
-                            <select class="form-control"  formControlName="Marca" disabled>
-                              <option *ngFor="let mo of marca$.data" value="{{mo.nombre_marca}}">{{mo.nombre_marca}}</option>
-                            </select>
-                          </div>
-                          <div class="col-6" *ngIf="!nuevaMarca">
-                            <select class="form-control"  formControlName="Marca">
-                              <option *ngFor="let mo of marca$.data" value="{{mo.nombre_marca}}">{{mo.nombre_marca}}</option>
-                            </select>
+
+<body>
+  <div class="page">
+    <div id="content-wrapper">
+      <div id="content">
+        <div class="row">
+          <div class="col-6" center>
+            <section class="section section-container" style="padding-bottom: 10px;">
+              <div class="box">
+                <h2>Agregar nueva actividad</h2>
+                <form [formGroup]="Motocicletaform">
+                  <div class="field">
+                    <div class="row" style="margin-left: 10%;">
+                      <div class="col-2">
+                        <img  src="../assets/icons/svg/motorbike_c.png"  width="72" class="d-inline-block align-center" alt="">
+                      </div>
+                      <div class="col-8">
+                        <div class="field">
+                          <label>Marca</label>
+                          <div class="row">
+                            <div class="col-6">
+                              <button class="btn btn-warning" style="width:140px;" (click)="NuevaMarca()">
+                                <label *ngIf=nuevaMarca style="color:white">Nueva Marca</label>
+                                <label *ngIf=!nuevaMarca style="color:white">Nueva Marca</label>
+                              </button>
+                            </div>
+                            <div class="col-6" *ngIf="nuevaMarca">
+                              <select class="form-control"  formControlName="Marca" disabled>
+                                <option *ngFor="let mo of marca$.data" value="{{mo.nombre_marca}}">{{mo.nombre_marca}}</option>
+                              </select>
+                            </div>
+                            <div class="col-6" *ngIf="!nuevaMarca">
+                              <select class="form-control"  formControlName="Marca">
+                                <option *ngFor="let mo of marca$.data" value="{{mo.nombre_marca}}">{{mo.nombre_marca}}</option>
+                              </select>
+                            </div>
                           </div>
                         </div>
-                      </div>
-                      <div class="field" *ngIf="nuevaMarca">
-                        <label>Nueva Marca</label>
-                        <input class="input" style="width: 300px;" type="text" formControlName="Nueva_Marca">
-                      </div>
-                      <div class="field">
-                        <label>Modelo<br></label>
-                        <input class="input" style="width: 300px;" type="text" formControlName="Modelo">
+                        <div class="field" *ngIf="nuevaMarca">
+                          <label>Nueva Marca</label>
+                          <input class="input" style="width: 300px;" type="text" formControlName="Nueva_Marca">
+                        </div>
+                        <div class="field">
+                          <label>Modelo<br></label>
+                          <input class="input" style="width: 300px;" type="text" formControlName="Modelo">
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="field">
-                  <div class="control">
-                    <button class="button is-success"  style="  margin-left: 70%;" (click)="onSubmit(Motocicletaform.value)">Guardar</button>
+                  <div class="field">
+                    <div class="control">
+                      <button class="button is-success"  style="  margin-left: 70%;" (click)="onSubmit(Motocicletaform.value)">
+                        Guardar
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </section>
+          </div>
+          <div class="col-6">
+            <section class="section section-container" style="padding-bottom: 20%;">
+              <div class="box">
+                <div class="row">
+                  <div class="col-2" style="margin-left: 5%;">
+                    <img  src="../assets/icons/svg/motocross_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                  </div>
+                  <div class="col-8">
+                    <h3>Listado de Motocicletas</h3>
                   </div>
                 </div>
-  						</form>
-  					</div>
-  				</section>
-  			</div>
-  			<div class="col-6">
-  				<section class="section section-container" style="padding-bottom: 20%;">
-  					<div class="box">
-  						<div class="row">
-  							<div class="col-2" style="margin-left: 5%;">
-  								<img  src="../assets/icons/svg/motocross_c.svg"  width="72" class="d-inline-block align-center" alt="">
-  							</div>
-  							<div class="col-8">
-  								<h3>Listado de Motocicletas</h3>
-  							</div>
-  						</div>
-  						<div class="table-responsive" style="align-content: center;">
-  							<table class="table table-bordered" style="width:60%; margin-top: 2%;margin-left: 20%;">
-	  							<thead class="thead-danger">
-                <tr class="table-danger">
-					                <th scope="col">#</th>
-					                <th scope="col">Marca</th>
-					                <th scope="col">Modelo</th>
-					              </tr>
-			            		</thead>
-					            <tbody>
-					               <tr *ngFor="let mo of moto$.data; let i=index">
-                  <th class="table-danger" style="text-align: center;" scope="row">{{i}}</th>
-                    <td>{{mo.marca}}</td>
-					                <td>{{mo.modelo}}</td>
-					              </tr>
-					          	</tbody>
-					        </table>
-					    </div>
-					</div>
-				</section>
-			</div>
-		</div>
-	</div>
-</div>
+                <div class="table-responsive" style="align-content: center;">
+                  <table class="table table-bordered" style="width:60%; margin-top: 2%;margin-left: 20%;">
+                    <thead class="thead-danger">
+                      <tr class="table-danger">
+                        <th scope="col">#</th>
+                        <th scope="col">Marca</th>
+                        <th scope="col">Modelo</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let mo of moto$.data; let i=index">
+                        <th class="table-danger" style="text-align: center;" scope="row">{{i}}</th>
+                        <td>{{mo.marca}}</td>
+                        <td>{{mo.modelo}}</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
