--- a/src/app/add-motocicleta/add-motocicleta.component.scss
+++ b/src/app/add-motocicleta/add-motocicleta.component.scss
@@ -1,7 +1,24 @@
+body, html {
+  	height: 100%;
+}
+
+.page{
+  	background-image: transparent;
+  	position: fixed;
+  	top: auto;
+  	left: 0;
+  	/* Preserve aspet ratio */
+  	min-width: 100%;
+  	min-height: 100%;
+  	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+}
+
 
 h1{
 	color: #4C4C4E;
-	bold: true;
+	text-decoration: bold;
 	font-family: Monaco;
 	text-align: center;
 	font-weight: bold;
@@ -10,7 +27,7 @@ h1{
 
 h2{
 	color: #4C4C4E;
-	bold: true;
+	text-decoration: bold;
 	font-family: Monaco;
 	text-align: center;
 	font-weight: bold;
