--- a/src/app/add-new-activity/add-new-activity.component.scss
+++ b/src/app/add-new-activity/add-new-activity.component.scss
@@ -1,3 +1,19 @@
+body, html {
+  	height: 100%;
+}
+
+.page{
+  	background-image: transparent;
+  	position: fixed;
+  	top: auto;
+  	left: 0;
+  	/* Preserve aspet ratio */
+  	min-width: 100%;
+  	min-height: 100%;
+  	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+}
 
 h1{
 	color: #4C4C4E;
