--- a/src/app/add-new-product/add-new-product.component.html
+++ b/src/app/add-new-product/add-new-product.component.html
@@ -1,12 +1,10 @@
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Nueva Orden de Trabajo</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17-beta.0/vue.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Dashboard General</title>
   <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
@@ -17,67 +15,72 @@
   <script src="../assets/js/sb-admin-2.min.js"></script>
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
-<body style="background-color: #C4C4C4;">
-  <app-nav></app-nav>
-    <div id="content-wrapper" style="background-image: url('./assets/img/background4.jpg'); background-position: center; background-size: cover;">
+
+<body>
+  <div class="page">
+    <div id="content-wrapper">
       <div id="content">
-	<div class="row">
-		<div class="col-6" center>
-			<section class="section section-container">
-        <div class="box" style="align-content: center;">
-          <h2>Agregar nuevo producto</h2>
-          <form [formGroup]="Productoform" (ngSubmit)="onSubmit(Productoform.value)">
-            <div class="field">
-              <div class="row" style="margin-left: 10%;">
-                <div class="col-2">
-                  <img  src="../assets/icons/svg/work_c.svg"  width="72" class="d-inline-block align-center" alt="">
-                </div>
-                <div class="col-8">
-                  <label>Nombre del nuevo producto:
-                    <input class="input" clearInput  type="text" formControlName="nombre_tipo">
-                  </label>
-		          	</div>
+        <div class="row">
+          <div class="col-6" center>
+            <section class="section section-container">
+              <div class="box" style="align-content: center;">
+                <h2>Agregar nuevo producto</h2>
+                <form [formGroup]="Productoform" (ngSubmit)="onSubmit(Productoform.value)">
+                  <div class="field">
+                    <div class="row" style="margin-left: 10%;">
+                      <div class="col-2">
+                        <img  src="../assets/icons/svg/work_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                      </div>
+                      <div class="col-8">
+                        <label>Nombre del nuevo producto:
+                          <input class="input" clearInput  type="text" formControlName="nombre_tipo">
+                        </label>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="control">
+                        <button class="button is-success"  style="margin-left: 70%;">
+                          Guardar
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
-              <div class="field">
-                <div class="control">
-                  <button class="button is-success"  style="margin-left: 70%;">Guardar</button>
+            </section>
+          </div>
+          <div class="col-6">
+            <section class="section section-container" style="padding-bottom: 20%;">
+              <div class="box">
+                <div class="row">
+                  <div class="col-2" style="margin-left: 5%;">
+                    <img  src="../assets/icons/svg/box_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                  </div>
+                  <div class="col-8">
+                    <h2>Listado de Productos</h2>
+                  </div>
+                </div>
+                <div class="table-responsive" style="align-content: center;">
+                  <table class="table" style="width:50%; margin-left: 25%;">
+                    <thead class="thead-danger">
+                      <tr class="table-danger">
+                        <th style="text-align: center;" scope="col">#</th>
+                        <th scope="col">Producto</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let prod of tipo$.data">
+                        <th class="table-danger" style="text-align: center;" scope="row">{{prod.idTipo}}</th>
+                        <td>{{prod.nombre_tipo}}</td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
-            </div>
-          </form>
-        </div>
-      </section>
-  	</div>
-  	<div class="col-6">
-  		<section class="section section-container" style="padding-bottom: 20%;">
-  			<div class="box">
-           <div class="row">
-            <div class="col-2" style="margin-left: 5%;">
-              <img  src="../assets/icons/svg/box_c.svg"  width="72" class="d-inline-block align-center" alt="">
-            </div>
-            <div class="col-8">
-              <h2>Listado de Productos</h2>
-            </div>
-          </div>
-          <div class="table-responsive" style="align-content: center;">
-            <table class="table" style="width:50%; margin-left: 25%;">
-              <thead class="thead-danger">
-                <tr class="table-danger">
-                  <th style="text-align: center;" scope="col">#</th>
-                  <th scope="col">Producto</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let prod of tipo$.data">
-                  <th class="table-danger" style="text-align: center;" scope="row">{{prod.idTipo}}</th>
-                  <td>{{prod.nombre_tipo}}</td>
-                </tr>
-              </tbody>
-            </table>
+            </section>
           </div>
         </div>
-		  </section>
-		</div>
-	</div>
-</div></div>
+      </div>
+    </div>
+  </div>
 </body>
