--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,19 +5,20 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Dashboard General</title>
-  <!-- Custom fonts for this template-->
-  <link href="./assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
-  <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
   <!-- Bootstrap core JavaScript-->
-  <script src="./assets/vendor/jquery/jquery.min.js"></script>
-  <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="../assets/vendor/jquery/jquery.min.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="../assets/js/sb-admin-2.min.js"></script>
+  <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
 
 <body>
   <div class="page">
-    <app-nav></app-nav>
+    <app-navbar></app-navbar>
     <div class="row">
       <div class="col-5" style="padding-left:5%; padding-top:2.5%;">
         <div class="card">
@@ -58,11 +59,6 @@
       </div>
 
       <div class="col-6" style="padding-left:5%; padding-top:2.5%;">
-
-        <div class="chart-pie pt-4">
-          <canvas id="TipoChart"></canvas>
-        </div>
-        
         <div class="row" style="margin-top:10px;">
           <div class="col-xl-4 col-md-6 mb-4">
             <div class="card border-left-primary shadow h-100 py-2">
@@ -180,14 +176,8 @@
               </div>
             </div>
           </div>
-
-
-
-
         </div>
       </div>
-
     </div>
   </div>
-
 </body>
