--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <!-- Custom fonts for this template-->
-  <link href="./assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <title>Dashboard General</title>
+  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
-  <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet">
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
+  <!-- Bootstrap core JavaScript-->
+  <script src="../assets/vendor/jquery/jquery.min.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="../assets/js/sb-admin-2.min.js"></script>
+  <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
 
 <body>
@@ -44,7 +49,7 @@
         </form>
       </div>
     </div>
-    <div class="header">
+    <footer>
       <div class="row">
         <div class="col-9">
           <img style="width:8% !important; padding-top:2%;" src="./assets/img/rozto-logo.png" class="d-inline-block align-center" alt=""/>
@@ -53,6 +58,6 @@
           <img style="width:80% !important; margin-left:10%" src="./assets/img/Imagotipo horizontal.png" class="d-inline-block align-center" alt=""/>
         </div>
       </div>
-    </div>
+    </footer>
   </div>
 </body>
