--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -1,12 +1,10 @@
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Nueva Orden de Trabajo</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17-beta.0/vue.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Dashboard General</title>
   <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
@@ -17,27 +15,34 @@
   <script src="../assets/js/sb-admin-2.min.js"></script>
   <script src="../assets/vendor/chart.js/Chart.min.js"></script>
 </head>
+
 <body>
-  <app-nav></app-nav>
-  <div id="content-wrapper" >
-    <div id="content">
-      <div class="row">
-        <div class="col">
-          <button class="btn btn-info" type="button" name="button">
-            <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/worker.svg" width="45" class="d-inline-block align-center" alt="">
-            Agregar motocicleta</button>
-        </div>
-        <div class="col">
-          <button class="btn btn-info" type="button" name="button">
-            <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/worker.svg" width="45" class="d-inline-block align-center" alt="">
-            Agregar motocicleta</button>
-        </div>
-        <div class="col">
-          <button class="btn btn-info" type="button" name="button">
-            <img style="padding:10px; padding-left: 5px;" src="./assets/icons/svg/worker.svg" width="45" class="d-inline-block align-center" alt="">
-            Agregar motocicleta</button>
-        </div>
-      </div>
+  <div class="page">
+    <app-navbar></app-navbar>
+    <div class="button-content">
+    <button class="btn btn-info" type="button" name="button" (click)="AddComponent('moto')">
+        <img style="padding-left: 5px;" src="./assets/icons/svg/motorbike_c.png" width="50" alt="">
+          <br>Agregar Motocicleta
+      </button>
+      <button class="btn btn-info" type="button" name="button" (click)="AddComponent('tipo')">
+        <img style="padding-left: 5px;" src="./assets/icons/svg/work_c.svg" width="50" alt="">
+          <br>
+          Agregar Producto
+      </button>
+      <button class="btn btn-info" type="button" name="button" (click)="AddComponent('actividad')">
+        <img style="padding-left: 5px;" src="./assets/icons/svg/workflow2_c.svg" width="50" alt="">
+        <br>
+          Agregar Actividad
+      </button>
+    </div>
+    <div *ngIf="addMoto">
+      <app-add-motocicleta></app-add-motocicleta>
+    </div>
+    <div *ngIf="addTipo">
+      <app-add-new-product></app-add-new-product>
+    </div>
+    <div *ngIf="addActividad">
+      <app-add-new-activity></app-add-new-activity>
     </div>
   </div>
 </body>
