--- a/src/app/cliente-detalle/cliente-detalle.component.html
+++ b/src/app/cliente-detalle/cliente-detalle.component.html
@@ -18,23 +18,23 @@
 
 <body>
   <div class="page">
-  <app-navbar></app-navbar>
-  <div id="content-wrapper" class="d-flex flex-column">
-    <div id="content">
-      <div class="container-fluid" style="width: 1000px; ">
-        <section class="section section-container">
-          <div class="box">
-            <div class="row" style="margin-bottom: 2%;">
-              <div class="col-2-sm" style="margin-left: 5%;">
-                <img  src="../assets/icons/svg/motorcyclist_c.svg"  width="72" class="d-inline-block align-center" alt="">
+    <app-navbar></app-navbar>
+    <div id="content-wrapper" class="d-flex flex-column">
+      <div class="content">
+          <section class="section section-container" style="padding-bottom: 15px;">
+            <div class="box">
+              <div class="row" style="padding-left: 10%;">
+                <div class="col-1">
+                  <img  src="../assets/icons/svg/motorcyclist2_c.svg"  width="72" class="d-inline-block align-center" alt="">
+                </div>
+                <div class="col-8">
+                  <br>
+                  <h2>Datos de cliente</h2>
+                  <br>
+                </div>
               </div>
-              <div class="col-8">
-                <br>
-                <h2>Datos de Cliente</h2>
-              </div>
-            </div>
             <div class="row">
-              <div class="col-10" style="color:#4C4C4E; padding-left: 10%;">
+              <div class="col-10" style="color:#4C4C4E; padding-left: 15%;">
                 <div class="list-group" *ngFor="let cliente of cliente$.data" style="border: transparent;">
                   <div class="list-group-item" style="border: transparent; background-color:#f8f9f9;">
                     <ul class="list-group list-group-horizontal" style="background-color:#f4f4f4;">
@@ -175,14 +175,14 @@
 
 
             <div class="row">
-              <div class="col-10" style="color:#4C4C4E; padding-left: 10%; ">
+              <div class="col-10" style="padding-left: 15%; ">
                 <br>
                 <h2>Órdenes de trabajo asociadas</h2>
                 <div class="table-responsive">
                   <table class="table table-bordered">
-                    <thead class="table-info">
-                      <tr class="table-info">
-                        <th class="col-1 table-info" style="text-align: center;">#</th>
+                    <thead>
+                      <tr>
+                        <th class="col-1" style="text-align: center;">#</th>
                         <th class="col-4" style="text-align: center;">Marca <br>motocicleta</th>
                         <th class="col-4" style="text-align: center;">Estado</th>
                         <th class="col-1"></th>
@@ -190,7 +190,7 @@
                     </thead>
                     <tbody>
                      <tr *ngFor="let ot of otRelacionadas$.data | paginate:{itemsPerPage: 8, currentPage:p}">
-                       <th class="table-info" style="text-align: center;" scope="row">{{ot.idOT}}</th>
+                       <th style="text-align: center;" scope="row">{{ot.idOT}}</th>
                        <td>{{ot.motocicleta}}</td>
                        <td>{{ot.estado}}</td>
                        <td>
@@ -206,5 +206,5 @@
         </section>
       </div>
     </div>
-  </div></div>
+  </div>
 </body>
