--- a/src/app/clientes/clientes.component.scss
+++ b/src/app/clientes/clientes.component.scss
@@ -19,12 +19,25 @@ section{
 	position: center;
 }
 
+img{
+  padding: 5%;
+  margin-top: 20%;
+  margin-bottom: 20%;
+  margin-left: 190%;
+}
+
+.content{
+  padding-top: 3%;
+  position: fixed;
+  left:20%;
+  width: 65%;
+}
 
 .box{
 	border: 1px solid #34495e !important;
 	background-color: #f8f9f9;
+  width: auto;
 }
-
 
 h1{
 	color: #4C4C4E;
@@ -34,13 +47,13 @@ h1{
 	font-weight: bold;
 }
 
-
 h2{
 	color: #4C4C4E;
 	text-decoration: bold;
 	font-family: Monaco;
 	text-align: center;
 	font-weight: bold;
+  margin-left: 15%;
 }
 
 label{
@@ -48,13 +61,30 @@ label{
 	font-family: Monaco;
 }
 
-.th{
+table{
+  width: 980px !important;
+  border-collapse: collapse;
+  border-radius: 1em;
+  overflow: hidden;
+  margin-left: 5% !important;
+}
+
+thead{
+  background-color: #4f667c;
+  color: #f4f4f4;
+  text-align: center;
+  border-radius: 20px
+
+}
+
+th{
+  background-color: #4f667c;
+	font-family: Monaco;
+	text-align: center;
+  color: #f4f4f4;
+}
+
+td{
 	font-family: Monaco;
 	text-align: center;
 }
-
-.td{
-	font-family: Monaco;
-	text-align: center;
-}
-
