--- a/src/app/ficha-ind/ficha-ind.component.scss
+++ b/src/app/ficha-ind/ficha-ind.component.scss
@@ -15,95 +15,78 @@ body, html {
   	background-size: cover;
 }
 
-footer {
-  	background-color: rgba(242, 243, 244, 0.35);
-  	position: absolute;
-  	bottom: 0;
-  	width: 100%;
-  	height: auto;
-  	color: white;
-  	padding-left:5%;
-  	padding-right:3%;
-}
-
 section{
 	position: center;
 }
 
+.col-2-sm img{
+  padding: 5%;
+  margin-top: 20%;
+  margin-bottom: 20%;
+  margin-left: 190%;
+}
+
+.content{
+  padding-top: 3%;
+  position: fixed;
+  left:20%;
+  width: 65%;
+}
 
 .box{
 	border: 1px solid #34495e !important;
 	background-color: #f8f9f9;
+  width: auto;
 }
 
 h1{
 	color: #4C4C4E;
-	bold: true;
+	text-decoration: bold;
 	font-family: Monaco;
 	text-align: center;
 	font-weight: bold;
 }
-
 
 h2{
 	color: #4C4C4E;
-	bold: true;
+	text-decoration: bold;
 	font-family: Monaco;
 	text-align: center;
 	font-weight: bold;
-}
-
-h3{
-	bold: true;
-	font-family: Monaco;
-	text-align: left;
-	font-weight: bold;
-	font-size:1rem;
-}
-
-
-h5{
-	bold: true;
-	font-family: Monaco;
-	text-align: center;
-	font-weight: bold;
-}
-
-h6{
-	bold: true;
-	font-family: Monaco;
-	text-align: center;
-	font-weight: bold;
-	font-size: 18px;
 }
 
 label{
-	color: #4C4C4E;
+	color: #d96421;
 	font-family: Monaco;
-	text-align: center;
-	border: transparent;
-	text-align: left;
 }
 
-.bloque{
-	color: #f8f9f9;
-	text-align: center;
-	align-content: center;
-	background-color: #f1c40f;
-	width:150px;
-	height: 40px;
-	border: 1px solid transparent !important;
-	border-radius:5px;
+table{
+  width: auto;
+  border-collapse: collapse;
+  border-radius: 1em;
+  overflow: hidden;
 }
-.th{
+
+thead{
+  background-color: #4f667c;
+  color: #f4f4f4;
+  text-align: center;
+  border-radius: 20px
+
+}
+
+th{
+  background-color: #4f667c;
+	font-family: Monaco;
+	text-align: center;
+  color: #f4f4f4;
+}
+
+td{
 	font-family: Monaco;
 	text-align: center;
 }
 
-.td{
-	font-family: Monaco;
-	text-align: center;
-}
 
 li{
 	color: #4C4C4E;
@@ -122,6 +105,14 @@ ul {
     border-radius: 2%;
 }
 
-.table{
-	background-color: #f8f9f9;
+
+.bloque{
+	color: #f8f9f9;
+	text-align: center;
+	align-content: center;
+	background-color: #f1c40f;
+	width:150px;
+	height: 40px;
+	border: 1px solid transparent !important;
+	border-radius:5px;
 }
