--- a/src/app/ficha/ficha.component.html
+++ b/src/app/ficha/ficha.component.html
@@ -18,36 +18,35 @@
 
 <body>
   <div class="page">
-  <app-navbar></app-navbar>
-  <div id="content-wrapper" class="d-flex flex-column">
-    <div id="content">
-      <div class="container-fluid" style="width: 1000px; ">
-        <section class="section section-container">
-          <div class="box">
+    <app-navbar></app-navbar>
+    <div id="content-wrapper" class="d-flex flex-column">
+      <div class="content">
+          <section class="section section-container" style="padding-bottom: 10px;">
+            <div class="box">
             <div class="row" style="margin-bottom: 2%;">
-              <div class="col-2-sm" style="margin-left: 5%;">
-                <img  src="../assets/icons/svg/settings3_c.svg"  width="72" class="d-inline-block align-center" alt="">
+              <div class="col-2-sm">
+                <img  src="../assets/icons/svg/settings3_c.svg"  style="  padding: 5%;
+                  margin-top: 20%;
+                  margin-bottom: 20%;
+                  margin-left: 190%;" width="72" class="d-inline-block align-center" alt="">
               </div>
-              <div class="col-8">
+              <div class="col-8" style="padding-left: 20%">
                 <br>
                 <h2>Órdenes de Trabajo</h2>
                 <br>
               </div>
-              <div class="col-2-sm" style="margin-left: 5%;">
-                <button class="btn btn-light" type="button" name="button" (click)="GenerarOT()">
-                  <div class="row" style="margin-left:10%">
-                    <img class="d-inline-block align-center" src="../assets/icons/svg/order.svg"  width="60" alt="">
-                  </div>
-                  <div class="row">
+              <div class="col-2-sm">
+                <button class="btn btn-light" type="button" name="button" (click)="GenerarOT()" style="height:100px;">
+                  <img class="d-inline-block align-center" src="../assets/icons/svg/order.svg"  width="72" alt="">
+                    <br>
                     <h6>Generar Nueva</h6>
-                  </div>
                 </button>
               </div>
             </div>
               <table class="table table-bordered">
-                <thead class="table-info">
-                  <tr class="table-info">
-                    <th class="col-1 table-info" style="text-align: center;">#</th>
+                <thead>
+                  <tr>
+                    <th class="col-1" style="text-align: center;">#</th>
                     <th class="col-4" style="text-align: center;">Nombre Cliente</th>
                     <th class="col-4" style="text-align: center;">Motocicleta</th>
                     <th class="col-4" style="text-align: center;">Estado</th>
@@ -56,7 +55,7 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let ot of ordenTrabajo$.data | paginate:{itemsPerPage: 8, currentPage:p}">
-                    <th class="table-info" style="text-align: center;" scope="row">OT{{ot.idOT}}</th>
+                    <th style="text-align: center;" scope="row">OT{{ot.idOT}}</th>
                     <td style="text-align: center;">{{ot.nombre}} {{ot.apellido_p}} {{ot.apellido_m}}</td>
                     <td style="text-align: center;">{{ot.motocicleta}}</td>
                     <td style="text-align: center;">{{ot.estado}}</td>
@@ -71,5 +70,5 @@
       </section>
       </div>
     </div>
-  </div></div>
-  </body>
+  </div>
+</body>
