--- a/src/app/ficha/ficha.component.scss
+++ b/src/app/ficha/ficha.component.scss
@@ -15,30 +15,26 @@ body, html {
   	background-size: cover;
 }
 
-footer {
-  	background-color: rgba(242, 243, 244, 0.35);
-  	position: absolute;
-  	bottom: 0;
-  	width: 100%;
-  	height: auto;
-  	color: white;
-  	padding-left:5%;
-  	padding-right:3%;
-}
-
 section{
 	position: center;
 }
 
+.content{
+  padding-top: 3%;
+  position: fixed;
+  left:20%;
+  width: 65%;
+}
 
 .box{
 	border: 1px solid #34495e !important;
 	background-color: #f8f9f9;
+  width: auto;
 }
 
 h1{
 	color: #4C4C4E;
-	bold: true;
+	text-decoration: bold;
 	font-family: Monaco;
 	text-align: center;
 	font-weight: bold;
@@ -46,7 +42,7 @@ h1{
 
 h2{
 	color: #4C4C4E;
-	bold: true;
+	text-decoration: bold;
 	font-family: Monaco;
 	text-align: center;
 	font-weight: bold;
@@ -57,12 +53,49 @@ label{
 	font-family: Monaco;
 }
 
-.th{
+table{
+  width: 980px !important;
+  border-collapse: collapse;
+  border-radius: 1em;
+  overflow: hidden;
+  margin-left: 5% !important;
+  margin-top: 2%;
+}
+
+thead{
+  background-color: #4f667c;
+  color: #f4f4f4;
+  text-align: center;
+  border-radius: 20px
+
+}
+
+th{
+  background-color: #4f667c;
+	font-family: Monaco;
+	text-align: center;
+  color: #f4f4f4;
+}
+
+td{
 	font-family: Monaco;
 	text-align: center;
 }
 
-.td{
+
+li{
+	color: #4C4C4E;
 	font-family: Monaco;
 	text-align: center;
+	border: transparent;
+	text-align: left;
+}
+
+ul {
+    list-style-type: none;
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+    border: 1px solid #e3dcdc;
+    border-radius: 2%;
 }
